bk_ida/gccida/g1/emit_pop_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_pop_insn/src/reg-stack.c:1379:56: error: must use 'enum' tag to refer to type 'emit_where'
rtx  emit_pop_insn( rtx insn, stack regstack, rtx reg, emit_where where) 
                                                       ^
                                                       enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_pop_insn/src/reg-stack.c:1390:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)reg + 2)] - 5) <= 1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_pop_insn/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_pop_insn/src/obj/reg-stack.o] Error 1
